--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/action_login"
         android:orderInCategory="2"
-        android:showAsAction="never"
-        android:title="Login"/>
+        app:showAsAction="never"
+        android:title="Login" />
 
 </menu>
